bk_ida/sjengida/c2/Rook
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/Rook/src/neval.c:773:7: error: use of undeclared identifier 'dword_66759C'
v5 = &dword_66759C[v2]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/Rook/src/neval.c:831:7: error: use of undeclared identifier 'Rook_square_d1'
v19 = Rook_square_d1[c]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/Rook/src/obj/neval.o] Error 1
